--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-python-multipart==0.0.6
-gunicorn==21.2.0
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+sqlalchemy>=2.0.36,<3.0.0
+python-multipart==0.0.12
+gunicorn==23.0.0
