--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.32.0
 sqlalchemy>=2.0.36,<3.0.0
 python-multipart==0.0.12
 gunicorn==23.0.0
-psycopg2-binary==2.9.9
+psycopg[binary]>=3.1.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
