--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,23 @@ __pycache__/
 env/
 venv/
 ENV/
-.venv
+.venv/
+pip-log.txt
+pip-delete-this-directory.txt
+.pytest_cache/
+.coverage
+htmlcov/
 
 # Database
 *.db
 *.sqlite
 *.sqlite3
+*.db-journal
+
+# Environment variables
+.env
+.env.local
+.env.*.local
 
 # IDE
 .vscode/
@@ -20,23 +31,31 @@ ENV/
 *.swp
 *.swo
 *~
-
-# OS
 .DS_Store
-Thumbs.db
 
 # Logs
 *.log
+logs/
 
-# Environment
-.env
-.env.local
-.env.*.local
-
-# Keep example .env files
-!.env.example
+# Backup files
+*.backup
+*.bak
+*.tar.gz
+memos_backup_*.tar.gz
+*.old
 
 # Temporary files
 *.tmp
-*.temp
+temp/
+tmp/
 
+# OS
+Thumbs.db
+.DS_Store
+
+# Local development
+memos.db
+local_config.py
+
+# Migration backups
+migrations/backups/
